--- a/poster/poster_file.tex
+++ b/poster/poster_file.tex
@@ -37,6 +37,8 @@
 \usepackage{amsfonts, amsmath, amsthm, amssymb} % For math fonts, symbols and environments
 \usepackage{wrapfig} % Allows wrapping text around tables and figures
 \usepackage{sectsty}
+\usepackage{algpseudocode}
+\newcommand\tab[1][1cm]{\hspace*{#1}}
 
 \sectionfont{\fontsize{54}{54}\selectfont}
 
@@ -77,42 +79,71 @@
 
 \section*{The Problem}
 
-\huge Parsers often fail miserably in finding syntactic errors
+\huge Parsers often fail miserably in finding syntax errors
 
-
-%----------------------------------------------------------------------------------------
-%	MATERIALS AND METHODS
-%----------------------------------------------------------------------------------------
-
-\section*{Materials and Methods}
-
-Fusce magna risus, molestie ut porttitor in, consectetur sed mi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque consectetur blandit pellentesque. Sed odio justo, viverra nec porttitor vel, lacinia a nunc. Suspendisse pulvinar euismod arcu, sit amet accumsan enim fermentum quis. In id mauris ut dui feugiat egestas. Vestibulum ac turpis lacinia nisl commodo sagittis eget sit amet sapien.
-
-%----------------------------------------------------------------------------------------
-%	RESULTS 
-%----------------------------------------------------------------------------------------
-
-\section*{Results}
-
-Donec faucibus purus at tortor egestas eu fermentum dolor facilisis. Maecenas tempor dui eu neque fringilla rutrum. Mauris \emph{lobortis} nisl accumsan. Aenean vitae risus ante.
-%
-\begin{wraptable}{l}{12cm} % Left or right alignment is specified in the first bracket, the width of the table is in the second
-\begin{tabular}{l l l}
-\toprule
-\textbf{Treatments} & \textbf{Response 1} & \textbf{Response 2}\\
-\midrule
-Treatment 1 & 0.0003262 & 0.562 \\
-Treatment 2 & 0.0015681 & 0.910 \\
-Treatment 3 & 0.0009271 & 0.296 \\
-\bottomrule
+\LARGE
+\color{Black}
+\begin{algorithmic}
+\State $1$ \textbf{if} (process.argv.length $>$ 3) \tab \textit{\color{red} // \{ }\color{Black}
+\State $2$ \tab\tab console.error(\color{NavyBlue}'Not enough args!'\color{Black});
+\State $3$ \tab\tab process.exit(1);
+\State $4$ $\}$
+\end{algorithmic}
+\color{NavyBlue}Mozilla SpiderMonkey (2016)\\\color{Black}
+\begin{tabular}{|p{37cm}}
+\tab wrong.js:4: SyntaxError: syntax error:\\
+\tab wrong.js:4: \}\\
+\tab wrong.js:4: \^{}
 \end{tabular}
-\captionof{table}{\color{Green} Table caption}
-\end{wraptable}
-%
-Phasellus imperdiet, tortor vitae congue bibendum, felis enim sagittis lorem, et volutpat ante orci sagittis mi. Morbi rutrum laoreet semper. Morbi accumsan enim nec tortor consectetur non commodo nisi sollicitudin. Proin sollicitudin. Pellentesque eget orci eros. Fusce ultricies, tellus et pellentesque fringilla, ante massa luctus libero, quis tristique purus urna nec nibh.
+\\\\
+\color{NavyBlue}Node with Google’s V8 JavaScript (2016)\\\color{Black}
+\begin{tabular}{|p{37cm}}
+\tab /path/to/wrong.js:6 \tab \textit{\color{red} // line 6 does not exist!\color{Black}}\\
+\tab \});\\
+\tab \^{}\\
+\tab SyntaxError: Unexpected token \}
+\end{tabular}
+\huge
+%----------------------------------------------------------------------------------------
+%	GrammarGuru
+%----------------------------------------------------------------------------------------
+\color{Navy}
+\section*{GrammarGuru}
+\LARGE
+GrammarGuru is a tool created by that seeks to find and fix single token syntax
+errors, using LSTM language models on 10,000 GitHub repos (EA Santos et al., 2017).
+%----------------------------------------------------------------------------------------
+%	Improving GrammarGuru suggestions 
+%----------------------------------------------------------------------------------------
 
-Nulla ut porttitor enim. Suspendisse venenatis dui eget eros gravida tempor. Mauris feugiat elit et augue placerat ultrices. Morbi accumsan enim nec tortor consectetur non commodo. Pellentesque condimentum dui. Etiam sagittis purus non tellus tempor volutpat. Donec et dui non massa tristique adipiscing. Quisque vestibulum eros eu. Phasellus imperdiet, tortor vitae congue bibendum, felis enim sagittis lorem, et volutpat ante orci sagittis mi. Morbi rutrum laoreet semper. Morbi accumsan enim nec tortor consectetur non commodo nisi sollicitudin.
+\section*{Improving GrammarGuru suggestions}
 
+GrammarGuru works greatly for insertions and deletions, however it rarely work when a token is changed, e.g when a keyword is mistyped, e.g \textbf{functions} rather than \textbf{function}. We improve GrammarGuru by training a NN that reevaluates and reranks GrammarGuru scores by using a modification of the features of the ranking system ROSE $[2]$:
+\color{Black}
+\begin{center}
+\begin{tabular}{ |c|c|c| } 
+ \hline
+ \textbf{ID} & \textbf{Description}\\ 
+ \hline
+ 1-4 & n-gram precision, n=1...4\\ 
+ 5-8 & n-gram recall, n=1...4 \\
+ 9-12 & n-gram f-measure, n=1...4 \\
+ 13 & average n-gram precision per code line\\
+ 14 & n-gram score at the document level \\
+ 15-18 & n-gram precision excluding common tokens, n=1...4\\
+ 19-22 & n-gram recall excluding common tokens, n=1...4\\
+ 23-26 & n-gram f-measure excluding stopwords, n=1...4\\
+ 27 & average n-gram precision excluding stopwords, n=1...4\\
+ 28 & pos distance of $hyp_1$, $hyp_2$ against parser error $\{-1, 0, 1 \}$\\
+ 29 & which of $hyp_1$, $hyp_2$ equals parser error token $\{ -1, 0, 1\}$\\
+ 30 & $hyp_1$ and/or $hyp_2$ fix the syntax error $\{ -1, 0, 1\}$ \\
+ 31 & which of $hyp_1$, $hyp_2$ has best score $\{-1, 0, 1\}$\\
+ \hline
+\end{tabular}
+\captionof{table}{\color{Green} ROSE features with modifications}
+\end{center}
+
+\color{Navy}
 \begin{center}\vspace{1cm}
 \includegraphics[width=0.8\linewidth]{placeholder}
 \captionof{figure}{\color{Green} Figure caption}
