Adding references to the project

--- a/poster/poster_file.tex
+++ b/poster/poster_file.tex
@@ -111,7 +111,7 @@
 \section*{GrammarGuru}
 \LARGE
 GrammarGuru is a tool created by that seeks to find and fix single token syntax
-errors, using LSTM language models on 10,000 GitHub repos (EA Santos et al., 2017).
+errors, using LSTM language models on 10,000 GitHub repos (Santos EA et al., 2017).
 %----------------------------------------------------------------------------------------
 %	Improving GrammarGuru suggestions 
 %----------------------------------------------------------------------------------------
@@ -173,17 +173,12 @@ Vivamus sed nibh ac metus tristique tristique a vitae ante. Sed lobortis mi ut a
 \captionof{figure}{\color{Green} Figure caption}
 \end{center}\vspace{1cm}
 
-\color{DarkSlateGray} % Set the color back to DarkSlateGray for the rest of the content
 
- %----------------------------------------------------------------------------------------
-%	REFERENCES
-%----------------------------------------------------------------------------------------
-
-\nocite{*} % Print all references regardless of whether they were cited in the poster or not
-\bibliographystyle{plain} % Plain referencing style
-\bibliography{sample} % Use the example bibliography file sample.bib
-
-%----------------------------------------------------------------------------------------
-
+\section*{References}
+\large
+$[1]$ \textbf{Santos EA, Campbell JC, Hindle A, Amaral JN. 2017}. Finding and correcting syntax errors using recurrent neural networks. PeerJ Preprints 5:e3123v1 https://doi.org/10.7287/peerj.preprints.3123v1
+\\
+\\
+$[2]$ \textbf{Xingyi Song and Trevor Cohn. 2011}. Regression and ranking based optimisation for sentence level machine translation evaluation. In Proceedings of the Sixth Workshop on Statistical Machine Translation, pages 123–129. Association for Computational Linguistics
 \end{multicols}
 \end{document}
