Finishing most of the poster

--- a/poster/poster_file.tex
+++ b/poster/poster_file.tex
@@ -144,35 +144,13 @@ GrammarGuru works greatly for insertions and deletions, however it rarely work w
 \end{center}
 
 \color{Navy}
-\begin{center}\vspace{1cm}
-\includegraphics[width=0.8\linewidth]{placeholder}
-\captionof{figure}{\color{Green} Figure caption}
-\end{center}\vspace{1cm}
-
-In hac habitasse platea dictumst. Etiam placerat, risus ac.
-
-Adipiscing lectus in magna blandit:
-
-\begin{center}\vspace{1cm}
-\begin{tabular}{l l l l}
-\toprule
-\textbf{Treatments} & \textbf{Response 1} & \textbf{Response 2} \\
-\midrule
-Treatment 1 & 0.0003262 & 0.562 \\
-Treatment 2 & 0.0015681 & 0.910 \\
-Treatment 3 & 0.0009271 & 0.296 \\
-\bottomrule
-\end{tabular}
-\captionof{table}{\color{Green} Table caption}
-\end{center}\vspace{1cm}
-
-Vivamus sed nibh ac metus tristique tristique a vitae ante. Sed lobortis mi ut arcu fringilla et adipiscing ligula rutrum. Aenean turpis velit, placerat eget tincidunt nec, ornare in nisl. In placerat.
-
-\begin{center}\vspace{1cm}
-\includegraphics[width=0.8\linewidth]{placeholder}
-\captionof{figure}{\color{Green} Figure caption}
-\end{center}\vspace{1cm}
-
+\begin{center}
+\includegraphics[width=0.8\linewidth]{proj_img}
+\end{center}
+\section*{Evaluation and Reranking}
+15 of the most unnatural tokens in the erroneous JS file are taken, evaluated and reranked by using the ROSE approach. We perform $15 \choose^{2}$ comparisons per file....
+\\\\
+\textbf{WHAT ELSE :(}
 
 \section*{References}
 \large
