Update Justin's email

--- a/poster/poster_file.tex
+++ b/poster/poster_file.tex
@@ -58,7 +58,7 @@
 \Huge\textit{}\\[2cm] % Subtitle
 \huge \textbf{Jordan Siaw, Justin Lew \& Luiz Peres}\\[0.5cm] % Author(s)
 \huge SFU School of Computing Science\\[0.4cm] % University/organization
-\Large \texttt{[\color{NavyBlue}'jsiaw'\color{Black}, \color{NavyBlue}'justin\_lew'\color{Black}, \color{NavyBlue}'lperesde']\color{Black}.\color[rgb]{0.435, 0.258, 0.756}map\color{Black}(f \color[rgb]{0.843, 0.227, 0.286}=> \color{Black}f \color[rgb]{0.843, 0.227, 0.286}+ \color{NavyBlue}'@sfu.ca'\color{Black})}\\
+\Large \texttt{[\color{NavyBlue}'jsiaw'\color{Black}, \color{NavyBlue}'jylew'\color{Black}, \color{NavyBlue}'lperesde']\color{Black}.\color[rgb]{0.435, 0.258, 0.756}map\color{Black}(f \color[rgb]{0.843, 0.227, 0.286}=> \color{Black}f \color[rgb]{0.843, 0.227, 0.286}+ \color{NavyBlue}'@sfu.ca'\color{Black})}\\
 \end{minipage}
 %
 \begin{minipage}[b]{0.25\linewidth}
