We don't have stopwords, we have 'common tokens'

--- a/poster/poster_file.tex
+++ b/poster/poster_file.tex
@@ -142,8 +142,8 @@ GrammarGuru is a tool created by Santos et al. (Santos EA et al., 2017) that att
  14 & n-gram score at the document level \\
  15-18 & n-gram precision excluding common tokens, n=1...4\\
  19-22 & n-gram recall excluding common tokens, n=1...4\\
- 23-26 & n-gram f-measure excluding stopwords, n=1...4\\
- 27 & average n-gram precision excluding stopwords, n=1...4\\
+ 23-26 & n-gram f-measure excluding common tokens, n=1...4\\
+ 27 & avg n-gram precision excluding common tokens, n=1...4\\
  28 & pos distance of $hyp_1$, $hyp_2$ against parser error $\{-1, 0, 1 \}$\\
  29 & which of $hyp_1$, $hyp_2$ equals parser error token $\{ -1, 0, 1\}$\\
  30 & $hyp_1$ and/or $hyp_2$ fix the syntax error $\{ -1, 0, 1\}$ \\
